--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,9 @@
 <resources>
     <string name="app_name">SmartHome</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="app_Light">Light</string>
+    <string name="app_roller">Roller Shutter</string>
+    <string name="app_heater">Heater</string>
+
 
 </resources>
+
