--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="app_roller">Roller Shutter</string>
     <string name="app_heater">Heater</string>
     <string name="app_all">All</string>
+    <string name="app_devices">Devices</string>
+
 
 
 
