--- a/app/src/main/res/values-en-rVG/strings.xml
+++ b/app/src/main/res/values-en-rVG/strings.xml
@@ -7,5 +7,15 @@
     <string name="app_all">All</string>
     <string name="app_save_change">Save change</string>
     <string name="app_devices">devices</string>
+    <string name="app_btn_validate"> validate</string>
+
+
+
+
+
+
+
+
+
 
 </resources>
