--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">SmartHome</string>
-    <string name="app_all" translatable="false">"All categories "</string>
-    <string name="app_devices" translatable="false">Devices</string>
-    <string name="app_btn_validate" translatable="false">Validate</string>
-    <string name="app_user_profile" translatable="false">"Profile "</string>
-    <string name="app_user_name" translatable="false">Name</string>
-    <string name="app_last_name" translatable="false">Last name</string>
-    <string name="app_user_birth_date" translatable="false">Date of Birth</string>
-    <string name="app_user_city" translatable="false">City</string>
-    <string name="app_user_city_code" translatable="false">City code</string>
-    <string name="app_user_city_street" translatable="false">Street</string>
-    <string name="app_user_contry" translatable="false">Contry</string>
-    <string name="app_user_street_code" translatable="false">Street code</string>
+    <string name="app_all" translatable="true">"All categories "</string>
+    <string name="app_devices" translatable="true">Devices</string>
+    <string name="app_btn_validate" translatable="true">Validate</string>
+    <string name="app_user_profile" translatable="true">"Profile "</string>
+    <string name="app_user_name" translatable="true">Name</string>
+    <string name="app_last_name" translatable="true">Last name</string>
+    <string name="app_user_birth_date" translatable="true">Date of Birth</string>
+    <string name="app_user_city" translatable="true">City</string>
+    <string name="app_user_city_code" translatable="true">City code</string>
+    <string name="app_user_city_street" translatable="true">Street</string>
+    <string name="app_user_contry" translatable="true">Contry</string>
+    <string name="app_user_street_code" translatable="true">Street code</string>
+    <string name="app_Light" translatable="true">Light</string>
+    <string name="app_roller" translatable="true">Roller Shutter</string>
+    <string name="app_heater" translatable="true">Heater</string>
+    <string name="app_user_upated" translatable="true">your profile successfully modified</string>
+    <string name="app_user_not_upated"  translatable="true" > Modification error</string>
+
+
 </resources>
