--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -1,16 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">SmartHome</string>
-    <string name="app_all" translatable="false">"Toutes les  catégories "</string>
-    <string name="app_devices" translatable="false">Dispositifs</string>
-    <string name="app_btn_validate" translatable="false">Dispositifs</string>
-    <string name="app_user_profile" translatable="false">Profile</string>
-    <string name="app_user_name" translatable="false">Nom</string>
-    <string name="app_last_name" translatable="false">prenom</string>
-    <string name="app_user_birth_date" translatable="false">"Date de naissance "</string>
-    <string name="app_user_city" translatable="false">Ville</string>
-    <string name="app_user_city_code" translatable="false">Code ville</string>
-    <string name="app_user_city_street" translatable="false">Rue</string>
-    <string name="app_user_contry" translatable="false">Pays</string>
-    <string name="app_user_street_code" translatable="false">"Code de rue "</string>
+    <string name="app_all" translatable="true">"Toutes les  catégories "</string>
+    <string name="app_devices" translatable="true" tools:ignore="Untranslatable">Dispositifs</string>
+    <string name="app_btn_validate" translatable="true">Confirmer</string>
+    <string name="app_user_profile" translatable="true">Profile</string>
+    <string name="app_user_name" translatable="true">Nom</string>
+    <string name="app_last_name" translatable="true">prenom</string>
+    <string name="app_user_birth_date" translatable="true">"Date de naissance "</string>
+    <string name="app_user_city" translatable="true">Ville</string>
+    <string name="app_user_city_code" translatable="true">Code ville</string>
+    <string name="app_user_city_street" translatable="true">Rue</string>
+    <string name="app_user_contry" translatable="true">Pays</string>
+    <string name="app_user_street_code" translatable="true">"Code de rue "</string>
+    <string name="app_Light" translatable="true">Lumière</string>
+    <string name="app_roller" translatable="true">"Volet roulant "</string>
+    <string name="app_heater" translatable="true">"Chauffe-eau "</string>
+    <string name="app_user_upated" translatable="true">Votre profil modifié avec succès</string>
+    <string name="app_user_not_upated" translatable="true">Error modification</string>
+
+
 </resources>
