--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,20 +1,23 @@
 <resources>
     <string name="app_name">SmartHome</string>
-    <string name="app_Light" translatable="false">Light</string>
-    <string name="app_roller" translatable="false">Roller Shutter</string>
-    <string name="app_heater" translatable="false">Heater</string>
-    <string name="app_all" translatable="false">"All categories "</string>
-    <string name="app_devices" translatable="false">devices</string>
-    <string name="app_btn_validate" translatable="false"> validate</string>
-    <string name="app_user_profile" translatable="false"> Profile</string>
-    <string name="app_user_name" translatable="false">Name</string>
-    <string name="app_last_name" translatable="false"> Last name</string>
-    <string name="app_user_birth_date" translatable="false">Date of Birth</string>
-    <string name="app_user_city" translatable="false"> City</string>
-    <string name="app_user_city_code" translatable="false">City code</string>
-    <string name="app_user_city_street" translatable="false"> Street</string>
-    <string name="app_user_contry" translatable="false">Contry</string>
-    <string name="app_user_street_code" translatable="false">Street code</string>
+    <string name="app_Light">Light</string>
+    <string name="app_roller">Roller Shutter</string>
+    <string name="app_heater">Heater</string>
+    <string name="app_all">"All categories "</string>
+    <string name="app_devices">devices</string>
+    <string name="app_btn_validate"> validate</string>
+    <string name="app_user_profile"> Profile</string>
+    <string name="app_user_name">Name</string>
+    <string name="app_last_name"> Last name</string>
+    <string name="app_user_birth_date">Date of Birth</string>
+    <string name="app_user_city"> City</string>
+    <string name="app_user_city_code">City code</string>
+    <string name="app_user_city_street"> Street</string>
+    <string name="app_user_contry">Contry</string>
+    <string name="app_user_street_code">Street code</string>
+    <string name="app_user_upated">your profile successfully modified</string>
+    <string name="app_user_not_upated">Error modification</string>
+
 
 
 </resources>
